--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             justify-content: center;
             align-items: center;
             /* Set the background image and adjust its properties */
-            background-image: url('images/tech_roads1.jpg');
+            background-image: url('tech_roads1.jpg');
             background-size: cover; /* Adjust to your preference */
             background-repeat: no-repeat;
             background-position: center center;
