--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <meta name="description" content="John Samuel's CV - Results-oriented professional with a strong background in leadership, customer service, and problem-solving. Aiming to contribute to the success of a financial institution's customer service team with excellent interpersonal skills and quick adaptability to new technologies.">
     <title>John Samuel - CV</title>
     <style>
-        /* Your CSS styles here */
+         body {
+            /* Set the background image and adjust its properties */
+            background-image: url('tech_roads1.jpg');
+            background-size: cover; /* Adjust to your preference */
+            background-repeat: no-repeat;
+            background-position: center center;
+            /* Adjust other properties as per your needs */
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            font-family: Arial, sans-serif;
+            color: #ffffff;
+        }
     </style>
     <!-- Add Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
